--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>236484af-3ecf-48c7-b7b2-6bec659b58d9</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
